--- a/socket/package.json
+++ b/socket/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
