--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "rxjs": "^6.0.0",
     "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
