--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 192.168.1.41",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
+    "ngx-color-picker": "^6.4.0",
     "rxjs": "^6.0.0",
     "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
