--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongodb": "^3.0.10",
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
