--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.22.2",
     "mongodb": "^3.0.10",
     "mongoose": "^5.1.6",
+    "mongoose-simple-random": "^0.4.1",
     "morgan": "~1.9.0",
     "socket.io": "^2.1.1",
     "validator": "^10.4.0"
