major update: restructured backend api, added a landing screen, added touch support, reorganized urls and socket management

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ frontend/out-tsc
 frontend/package-lock.json
 frontend/firebase.json
 frontend/.firebaserc
+frontend/src/assets/background.jpeg
 
 # Socket
 socket/node_modules
